# efg

./: .gitignore  MEMO.txt  Makefile  README.txt  configure.ac
compiler/: Makefile.am  c_node.cpp  c_node.h  c_to_il.cpp  c_to_il.h  compiler.cpp  compiler.h  efg.sh  generator.cpp  generator.h  il_node.cpp  il_node.h  il_spec.cpp  il_spec.h  main.cpp  optimizer.cpp  optimizer.h  p_lex.l_  p_node.cpp  p_node.h  p_to_c.cpp  p_to_c.h  p_yacc.y_  parser.cpp  parser.h  utility.cpp  utility.h
runtime/: Makefile.am  dumper.c  dumper.h  g_runtime.c  g_runtime.h  memory_pool.c  memory_pool.h  queue.c  queue.h  tree.c  tree.h  utility.c  utility.h  vector.c  vector.h
sample/: Makefile
sample/base/: append.lmn  appendloop.lmn  btoc.lmn  c60.lmn  ciger.lmn  easy-listnum-erathostenes.lmn  genappend.lmn  genappend2.lmn  genappend3.lmn  genappend4.lmn  genlist.lmn  genlist2.lmn  insertionsort.lmn  josephus.lmn  josephus2.lmn  test.lmn
sample/integer/: collatz.lmn  erathostenes.lmn  integer.lmn  integer2.lmn
